# stm32f103-usb-periph-expander

./: .gitignore  README.md  flash.bash
cmake/: TOOLCHAIN_arm_none_eabi_cortex_m3.cmake
source/: CMakeLists.txt  STM32F103C8Tx.ioc
source/STM32_USB-FS-Device_Driver/inc/: usb_lib.h
source/StdPeriph_Driver/: CMakeLists.txt
source/src/: CMakeLists.txt  cmd_parser.inc  comm_protocol.c  common_tools.c  dev_adc.c  dev_gpio.c  dev_i2c.c  dev_led.c  dev_spi.c  dev_uart.c  dev_usb_uart.c  hw_config.c  main.c  platform_devices.c  stm32f10x_it.c  syscalls.c  text_cmd_parser.inc  usb_desc.c  usb_endp.c  usb_istr.c  usb_prop.c  usb_pwr.c
source/src/inc/: comm_protocol.h  common_tools.h  crc16.h  dev_adc.h  dev_gpio.h  dev_i2c.h  dev_led.h  dev_spi.h  dev_timer.h  dev_uart.h  dev_usb_uart.h  hw_config.h  list.h  platform_config.h  platform_devices.h  proxy.h  stm32f10x_it.h  usb_conf.h  usb_desc.h  usb_istr.h  usb_prop.h  usb_pwr.h
